# simple-backend

./: Cargo.toml  OurApp.db  OurApp.db-shm  OurApp.db-wal  README.md  crap.ts  server.js
files/: README.md  live_data.json
src/: AppState.rs  lib.rs  main.rs
templates/: create-post.html  dashboard.html  edit-post.html  homepage.html  login.html  single-post.html  test.html
templates/includes/: head.html  header.html
views/: create-post.ejs  dashboard.ejs  homepage.ejs  login.ejs
views/includes/: header.ejs
