[package]
name = "simple-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = "0.5.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = { version = "1.20.0", features = ["builtins"] }
lazy_static = "1.5.0"
sqlite = "0.37.0"
dotenv = "0.15.0"
bcrypt = "0.17.0"
jsonwebtoken = "9.3.1"
ammonia = "4.0.0"
chrono = "0.4"
regex = "1.11.1"

